hard-gists/7719245/run.log
=== Docker Run Log for 7719245 ===
Started at: Mi 29. Okt 17:17:08 CET 2025

[2025-10-29 17:17:09] START: Running container for 7719245
[2025-10-29 17:17:09] SUCCESS: Container b893f5f9a423f11caf719fd522986e4d07b8148335f83b6c3a7ef53cc940624c started for 7719245
=== Container logs for 7719245 ===
  File "/snippet.py", line 711
    print "Error:", X_err
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7719245 ===
[2025-10-29 17:17:11] INFO: Container b893f5f9a423f11caf719fd522986e4d07b8148335f83b6c3a7ef53cc940624c has stopped
